# ctpktool

./: CMakeLists.txt  README.md
dep/lib/Windows_x86_32/: libpng16_static.lib  zlibstatic.lib
dep/lib/Windows_x86_64/: libpng16_static.lib  zlibstatic.lib
src/: CMakeLists.txt  ctpk.cpp  ctpk.h  ctpktool.cpp  ctpktool.h  utility.cpp  utility.h
